--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,28 @@
-.my-class {
-    margin: 120px;
-    border: 2px solid green;
-    padding: 40px;
-    float: right;
-    width: 300px;
+.box1 {
+    width: 50%;
+    border: solid black;
+    border-width: 1px;
+    background-color: orange;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+  }
+  
+  .box2 {
+    width: 50%;
+    padding: 20px;
+    border: solid black;
+    border-width: 20px;
+    background-color: orange;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+  }
+  
+  .box3 {
+    width: 50%;
+    padding: 50px;
+    border: solid black;
+    border-width: 30px;
+    background-color: orange;
+    margin-bottom: 10px;
+    box-sizing: border-box;
   }
